--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "npm": "6.9.0",
+	"node": "10.16.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
