--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebaseui": "^4.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-web": "^0.12.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
